# ncu-rs

./: Cargo.toml  README.md
.github/workflows/: ci.yml
src/: main.rs
