[package]
name = "ncu-rs"
version = "0.1.0"
edition = "2021"
repository = "https://github.com/Huskehhh/ncu-rs"
description = "A stupid simple and fast cli for updating your package.json dependencies."
license = "MIT"

[dependencies]
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1", features = ["preserve_order"] }
color-eyre = "0.6"
urlencoding = "2"
futures = "0.3"
pbr = "1"
clap = { version = "3", features = ["cargo"] }
indexmap = { version = "1.9.1", features = ["serde"] }
